Fixed the width issue V2.0 and stopped the nav from overlapping with everything.

--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -31,9 +31,10 @@ body {
 }
 
 nav {
-    width: 100vw;
+    width: 100%;
     box-shadow: 0 4px 2px -2px gray;
 	ul {
+		width: 600px;
 		margin: 50px 0 50px 325px;
 		list-style-type: none;
 		a {
@@ -51,7 +52,7 @@ nav {
 			margin-right: 10px;
 			li {
 				margin: 0;
-                
+
 			}
 		}
 	}
@@ -140,7 +141,7 @@ ul {
 
 .text {
     font-size: 15px; // padding: 8px 12px;
-    width: 100vw;
+    width: 100%;
     text-align: center;
 }
 
@@ -194,6 +195,12 @@ ul {
     -webkit-animation-duration: 1.5s;
     animation-name: fade;
     animation-duration: 1.5s;
+}
+
+/* Empty space to push images down */
+
+.space {
+	height: 100px;
 }
 
 @-webkit-keyframes fade {
